force-app/main/default/objects/EDBI_Order__c/EDBI_Order__c.object-meta.xml
<CustomObject>
    <description>This object is used to sync all orders data from EDBI to NSC.</description>
    <label>EDBI Order</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDBI Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>