force-app/main/default/objects/EDBI_Order__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EDBI Orders</relationshipLabel>
    <relationshipName>EDBI_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>