force-app/main/default/objects/EDBI_Order__c/fields/Anaplan_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Anaplan_Opportunity_Number__c</fullName>
    <description>The value in this field will come from Anaplan.</description>
    <label>Anaplan Opportunity Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>