force-app/main/default/objects/EDBI_Order__c/fields/Backlog_Orders_Amount__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Orders_Amount__c</fullName>
    <label>Backlog Orders Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>