force-app/main/default/objects/EDBI_Order__c/fields/Backlog_Orders_Status__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Orders_Status__c</fullName>
    <label>Backlog Orders Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>