force-app/main/default/objects/EDBI_Order__c/fields/CADD_Status__c.field-meta.xml
<CustomField>
    <fullName>CADD_Status__c</fullName>
    <label>CADD Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>