force-app/main/default/objects/EDBI_Order__c/fields/Country_Code_With_Master_Customer_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_With_Master_Customer_Nbr__c</fullName>
    <externalId>true</externalId>
    <label>Country Code With Master Customer Nbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>