force-app/main/default/objects/EDBI_Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>