force-app/main/default/objects/EDBI_Order__c/fields/FUA_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>FUA_Site_Name__c</fullName>
    <label>FUA Site Name</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>