force-app/main/default/objects/EDBI_Order__c/fields/FUA_Site_Nbr__c.field-meta.xml
<CustomField>
    <fullName>FUA_Site_Nbr__c</fullName>
    <label>FUA Site Nbr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>