force-app/main/default/objects/EDBI_Order__c/fields/Max_Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Customer_Requested_Date__c</fullName>
    <label>Max Customer Requested Date</label>
    <type>Date</type>
</CustomField>