force-app/main/default/objects/EDBI_Order__c/fields/Max_Promise_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Max_Promise_DateTime__c</fullName>
    <label>Max Promise DateTime</label>
    <type>Date</type>
</CustomField>