force-app/main/default/objects/EDBI_Order__c/fields/NCR_Associate__c.field-meta.xml
<CustomField>
    <fullName>NCR_Associate__c</fullName>
    <label>NCR Associate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>