force-app/main/default/objects/EDBI_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>This field contains the opportunity Id of the corresponding NSC_Opportunity_Number__c.</description>
    <label>Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>