force-app/main/default/objects/EDBI_Order__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>