force-app/main/default/objects/EDBI_Order__c/fields/Order_Number_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_with_Country_Code__c</fullName>
    <externalId>true</externalId>
    <label>Order Number with Country Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>