force-app/main/default/objects/EDBI_Order__c/fields/Order_Score_Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Score_Last_Update_Date__c</fullName>
    <label>Order Score Last Update Date</label>
    <type>Date</type>
</CustomField>