force-app/main/default/objects/EDBI_Order__c/fields/Order_Value_in_Thousand__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_in_Thousand__c</fullName>
    <label>Total Order $ Value (in Thousands)</label>
    <length>24</length>
    <type>Text</type>
</CustomField>