force-app/main/default/objects/EDBI_Order__c/fields/Primary_Salesperson_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salesperson_Nbr__c</fullName>
    <label>Primary Salesperson Nbr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>