force-app/main/default/objects/EDBI_Order__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org_Temp__c</referenceTo>
    <relationshipLabel>EDBI Orders</relationshipLabel>
    <relationshipName>EDBI_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>