force-app/main/default/objects/EDBI_Order__c/fields/Ship_to_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Site_Name__c</fullName>
    <label>Ship to Site Name</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>