force-app/main/default/objects/EDBI_Order__c/fields/Ship_to_Site_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Site_Nbr__c</fullName>
    <label>Ship to Site Nbr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>