force-app/main/default/objects/EDBI_Order__c/fields/SW_Value__c.field-meta.xml
<CustomField>
    <fullName>SW_Value__c</fullName>
    <label>SW $ Value (in Thousands)</label>
    <length>24</length>
    <type>Text</type>
</CustomField>