force-app/main/default/objects/EDBI_Order__c/fields/TS_Value__c.field-meta.xml
<CustomField>
    <fullName>TS_Value__c</fullName>
    <label>TS $ Value (in Thousands)</label>
    <length>24</length>
    <type>Text</type>
</CustomField>